--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -11,9 +11,28 @@ body,
 .h-full {
   height: 100%;
 }
+.min-h-full{
+  min-height: 100%;
+}
 .w-full {
   width: 100%;
 }
+.flex-1{
+  flex: 1;
+}
 .dark{
   background-color: #101014;
+}
+.n-layout-scroll-container{
+  width: 100%;
+}
+.content-flex {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.flex-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
