--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,11 @@
 @import './base.css';
-
+@import './transition.css';
+@import './theme/default.css';
+@import './theme/dark.css';
 
 a,
 .green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
- 
+    text-decoration: none;
+    color: hsla(160, 100%, 37%, 1);
+    transition: 0.4s;
 }
-
