--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,5 +1,8 @@
 /* src/assets/base.css */
 @import 'tailwindcss';
+@theme {
+    --color-primary: #18a058;
+}
 :root {
     --n-bezier: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -71,4 +74,7 @@ body,
 .n-scrollbar-content {
     min-height: 100%;
     width: 100%;
+}
+#nprogress .bar {
+    background: var(--color-primary) !important; /* 进度条主色 */
 }
